--- a/app/style/base.less
+++ b/app/style/base.less
@@ -18,10 +18,27 @@ body{
     height: 3.15rem;
     .paddingRight;
     box-shadow: 4px 4px 40px 0 rgba(0, 0, 0, 0.05);
+    .ant-dropdown-link{
+        display: block;
+        color: #fff;
+        line-height: 2.8rem;
+        .ant-avatar{
+            vertical-align: middle;
+             .anticon-setting;
+        }
+        .anticon-setting{
+            margin-right: 0.35rem;
+        }
+    }
+    ul {
+        .pull-right;
+        li {
+            display: inline-block;
+            margin-right: 1rem;
+        }
+    }
     .operating{
         .pull-right;
-        height: inherit;
-        line-height: 4;
     }
 }
 // login less
@@ -51,4 +68,179 @@ body{
     .login-form-forgot{
         float: right;
     }
+}
+.content-box{
+    background: #fff;
+    .border;
+    .borderRadius;
+    .ant-table-body{
+        height: 27.6rem;
+    }
+    .footer{
+        padding: 0.6rem 0 0.6rem 0.6rem;
+        .border-top;
+        .ant-pagination{
+            text-align: center;
+        }
+        .ant-pagination-total-text{
+            .pull-right;
+        }
+        .operating{
+            .pull-left;
+            >a{
+                line-height: 3;
+                color: #4a4a4a;
+                border: 1px solid #d9d9d9;
+                .borderRadius;
+                padding: 3px;
+               .mar-spacing-right;
+                i{
+                    width: 1rem;
+                }
+            }   
+        }
+    }
+    .title{
+        background: #f7f7f7;
+        padding: 0.6rem 0 0.6rem 0.6rem;
+        font-size: 14px;
+        .border-bottom;
+    }
+}
+
+//welcome
+.welcome-table{
+    line-height: 1.5;
+}
+.PieChart{
+    width: 80%;
+    height: 4rem;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.contont-box{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    left: 200px;
+    top: 3.15rem;
+}
+.welcome-title-header{
+    font-weight: 500;
+    .border-bottom;
+    .pad-spacing-left;
+    .pad-spacing-top;
+    .pad-spacing-bottom;
+    h5{
+        line-height: 28px;
+        font-size: 14px;
+    }
+    h5,.ant-select{
+        display: inline-block;
+    }
+    .ant-select{
+        float: right;
+        .pad-spacing-right;
+    }
+}
+.statistics{
+    .statistics-First, .statistics-Second, .statistics-Third{
+        .ant-col-8{
+            padding-right:0px !important;
+            &:last-child{
+                padding-right: 8px !important;
+            }
+            .ant-card-bordered{
+                height: 5.05rem !important;
+                .ant-card-body{
+                    padding: 0.6rem;
+                    .clearfix;
+                    >div{
+                        display: inline-block;
+                        &:first-child{
+                            line-height: 4rem;
+                        }
+                        &:last-child{
+                            .pull-right;
+                        }
+                        >i{
+                            font-size: 1.6rem;
+                        }
+                        >ul{
+                            line-height: 1.5rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .statistics-First{
+        .ant-col-8{
+            .ant-card-bordered{
+                border-left: 5px solid #7ed321;
+                .ant-card-body{
+                    >div{
+                        &:last-child{
+                            text-align: right;
+                        }
+                        >i,ul>li:first-child{
+                            color: #7ed321;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .statistics-Second{
+        .ant-col-8{
+            .ant-card-bordered{
+                border-left: 5px solid #4183f8;
+                .ant-card-body{
+                    >div{
+                        &:last-child{
+                            text-align: right;
+                        }
+                        >i,ul>li:first-child{
+                            color: #4183f8;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .statistics-Third{
+        .ant-col-8{
+            .ant-card-bordered{
+                border: 1px solid #f6a623;
+                .ant-card-body{
+                    >div{
+                        &:last-child{
+                            text-align: right;
+                        }
+                        >i,ul>li{
+                            color: #f6a623;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+//公司管理
+
+
+.custom-filter-dropdown {
+  padding: 8px;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, .2);
+}
+
+.custom-filter-dropdown input {
+  width: 130px;
+  margin-right: 8px;
+}
+
+.highlight {
+  color: #f50;
 }
