--- a/app/style/theme.less
+++ b/app/style/theme.less
@@ -23,8 +23,8 @@
 @btn-ghost-border       : #AFB4BA;
 
 // 边框颜色以及圆角
-@border-color-base      : #d9d9d9;        // base border outline a component
-@border-color-split     : #e9e9e9;        // split border inside a component
+// @border-color-base      : #d9d9d9;        // base border outline a component
+// @border-color-split     : #e9e9e9;        // split border inside a component
 @border-radius-base     : 0px;
 
 @border-radius-lg       : 4px;
@@ -61,7 +61,11 @@
 
 
 
-
+.position-fixed{
+	position: fixed;
+	.FullScreen;
+	background: #fff;
+}
 .FullScreen{
     left: 0px;
     right: 0px;
@@ -78,7 +82,6 @@
     padding-right: 0.95rem !important;
 }
 .colorWhite{
-
 	a{
 		color: #fff;
 	}
@@ -89,4 +92,78 @@ a{
 	&:hover{
 		text-decoration: none;
 	}
+}
+// 重写antd的less
+.ant-layout-header{
+    line-height: normal;
+}
+// 内间距统一设置
+.pad-spacing{padding: 0.35rem;}
+.pad-spacing-top{padding-top: 0.35rem;}
+.pad-spacing-right{padding-right: 0.35rem;}
+.pad-spacing-bottom{padding-bottom: 0.35rem;}
+.pad-spacing-left{padding-left: 0.35rem;}
+// 外间距统一设置
+.mar-spacing{margin: 0.35rem;}
+.mar-spacing-top{margin-top: 0.35rem;}
+.mar-spacing-right{margin-right: 0.35rem;}
+.mar-spacing-bottom{margin-bottom: 0.35rem;}
+.mar-spacing-left{margin-left: 0.35rem;}
+//边框设置
+.border-color{
+    border-color: #e7e7e7;
+}
+.border{
+	border-width: 1px;
+	border-style: solid;
+	.border-color;
+}
+.border-top{
+	border-top-width: 1px;
+	border-top-style: solid;
+	.border-color;
+}
+.border-right{
+	border-right-width: 1px;
+	border-right-style: solid;
+	.border-color;
+}
+.border-bottom{
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	.border-color;
+}
+.border-left{
+	border-left-width: 1px;
+	border-left-style: solid;
+	.border-color;
+}
+// 圆角统一设置
+.borderRadius{border-radius: 4px; }
+.borderRadius-top-left{border-top-left-radius: 4px; }
+.borderRadius-top-right{border-top-right-radius: 4px; }
+.borderRadius-bottom-left{border-bottom-left-radius: 4px; }
+.borderRadius-bottom-right{border-bottom-right-radius: 4px; }
+//halfwidth
+.halfwidth{width:49.75%}
+//同行
+.display-line{
+    display: inline-block;
+}
+.vertical-align{
+	vertical-align: top;
+}
+//清除浮动
+ .clearfix{ /*兼容 IE*/
+	zoom: 1;
+	&:after{
+		content: '';
+		display: block;
+		clear: both;
+	}
+}
+
+//字体设置
+.textAlign-right{
+	text-align: right
 }
