welcome react-highcharts 图表增加

--- a/app/style/base.less
+++ b/app/style/base.less
@@ -226,6 +226,12 @@ body{
         }
     }
 }
+.highchart-box{
+    // height: 17.2rem;
+    // min-width: 4rem;
+    min-width: 400px;
+    height: 276px;
+}
 //公司管理
 
 
