上传正式代码

--- a/app/style/base.less
+++ b/app/style/base.less
@@ -85,20 +85,7 @@ body{
         .ant-pagination-total-text{
             .pull-right;
         }
-        .operating{
-            .pull-left;
-            >a{
-                line-height: 3;
-                color: #4a4a4a;
-                border: 1px solid #d9d9d9;
-                .borderRadius;
-                padding: 3px;
-               .mar-spacing-right;
-                i{
-                    width: 1rem;
-                }
-            }   
-        }
+       
     }
     .title{
         background: #f7f7f7;
@@ -249,4 +236,32 @@ body{
 
 .highlight {
   color: #f50;
+}
+
+ .operating{
+    .pull-left;
+    >a{
+        line-height: 3;
+        color: #4a4a4a;
+        border: 1px solid #d9d9d9;
+        .borderRadius;
+        padding: 3px;
+        .mar-spacing-right;
+        i{
+            width: 1rem;
+        }
+    }   
+}
+.standard-table{
+    .ant-table-fixed-header{
+        .border-bottom;
+    }
+    .ant-pagination{
+        text-align: center;
+        float: none;
+        .ant-pagination-total-text{
+            .pull-right;
+            .pad-spacing-right;
+        }
+    }
 }
