功能性提交

--- a/app/style/theme.less
+++ b/app/style/theme.less
@@ -104,3 +104,18 @@ a{
 .textAlign-right{
 	text-align: right
 }
+.displayFlex{
+	display: flex;
+}
+//title的背景色
+.TitleBackground{
+	background-color: #f7f7f7;
+}
+.Background{
+	background-color: #fff;
+}
+
+/**数字输入框*/
+.ant-input-number{
+	width: 100%;
+}
