--- a/app/style/base.less
+++ b/app/style/base.less
@@ -69,10 +69,12 @@ body{
         float: right;
     }
 }
+/*框架样式*/
 .content-box{
-    background: #fff;
+    // background: #fff;
     .border;
     .borderRadius;
+    height: 100%;
     .ant-table-body{
         height: 27.6rem;
     }
@@ -93,6 +95,7 @@ body{
         font-size: 14px;
         .border-bottom;
     }
+    
 }
 
 //welcome
@@ -237,9 +240,20 @@ body{
 .highlight {
   color: #f50;
 }
-
- .operating{
-    .pull-left;
+/*footer操作按钮样式**/
+.operating{
+    .Background;
+    .border;
+    padding: 0.5rem 0.35rem;
+    .borderRadius-bottom-left;
+    .borderRadius-bottom-right;
+    ul{
+        text-align: center;
+        width: 100%;
+        li.ant-pagination-total-text{
+            .pull-right;
+        }
+    }
     >a{
         line-height: 3;
         color: #4a4a4a;
@@ -252,7 +266,11 @@ body{
         }
     }   
 }
+//表样式
 .standard-table{
+    .Background;
+    width: 100%;
+    height: 30.5rem;
     .ant-table-fixed-header{
         .border-bottom;
     }
@@ -263,5 +281,44 @@ body{
             .pull-right;
             .pad-spacing-right;
         }
+    }
+}
+
+/**leftTabsNav**/
+.leftTabsNav{
+    // width:11rem;
+    .Background;
+    .ColumnTitle{
+        padding: 0.5rem;
+        .border-bottom;
+        .TitleBackground;
+        color:rgba(0, 0, 0, 0.65)!important;
+        font-size: 14px;
+    }
+    >ul{
+        border-right: 0px;
+        >li{
+            .border-bottom;
+            width: 11.5rem;
+        }
+    }
+}
+
+/**角色管理**/
+.Role{
+    .ant-tabs {
+        height: 100%;
+        .ant-tabs-bar{
+            margin-bottom: 0.3rem;
+        }
+        .ant-tabs-content{
+            .Background;
+        }
+    }
+}
+/**tabs样式**/
+.ant-tabs-editable-card{
+    .ant-tabs-bar{
+        margin-bottom: 0px;
     }
 }
